修改适配 zmk-config的多shield方式

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -24,6 +24,7 @@
             "name": "LocalServer2",
             "skipFiles": ["node_modules/**"],
             "cwd": "${workspaceFolder}/api",
+            "envFile": "${workspaceFolder}/.env.development",
             "program": "server.js" // 修改为你的入口文件
         },
         {
