--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   
   "scripts": {
-    "start": "node server.js",
+    "start": "NODE_ENV=production node server.js",
     "dev": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
